catkin_ws/logs/iq_gnc/build.make.408.log.stderr
In file included from /opt/ros/noetic/include/ros/ros.h:40,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:11,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsSub_cb(const ConstPtr&)’:
/opt/ros/noetic/include/ros/console.h:351:176: error: no matching function for call to ‘print(NULL, void*&, ros::console::Level&, const char [54], int, const char [39], std::string&)’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                                ^
/opt/ros/noetic/include/ros/console.h:354:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  354 |     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:263:5: note: in expansion of macro ‘ROS_INFO’
  263 |     ROS_INFO(ros_namespace_l);
      |     ^~~~~~~~
/opt/ros/noetic/include/ros/console.h:161:22: note: candidate: ‘void ros::console::print(ros::console::FilterBase*, void*, ros::console::Level, const char*, int, const char*, const char*, ...)’
  161 | ROSCONSOLE_DECL void print(FilterBase* filter, void* logger, Level level,
      |                      ^~~~~
/opt/ros/noetic/include/ros/console.h:163:39: note:   no known conversion for argument 7 from ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const char*’
  163 |     const char* function, const char* fmt, ...) ROSCONSOLE_PRINTF_ATTRIBUTE(7, 8);
      |                           ~~~~~~~~~~~~^~~
/opt/ros/noetic/include/ros/console.h:165:22: note: candidate: ‘void ros::console::print(ros::console::FilterBase*, void*, ros::console::Level, const stringstream&, const char*, int, const char*)’
  165 | ROSCONSOLE_DECL void print(FilterBase* filter, void* logger, Level level,
      |                      ^~~~~
/opt/ros/noetic/include/ros/console.h:166:30: note:   no known conversion for argument 4 from ‘const char [54]’ to ‘const stringstream&’ {aka ‘const std::__cxx11::basic_stringstream<char>&’}
  166 |     const std::stringstream& str, const char* file, int line, const char* function);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/opt/ros/noetic/include/ros/console.h:351:176: error: no matching function for call to ‘print(NULL, void*&, ros::console::Level&, const char [54], int, const char [39], std::string&)’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                                ^
/opt/ros/noetic/include/ros/console.h:354:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  354 |     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:267:5: note: in expansion of macro ‘ROS_INFO’
  267 |     ROS_INFO(ros_namespace_l);
      |     ^~~~~~~~
/opt/ros/noetic/include/ros/console.h:161:22: note: candidate: ‘void ros::console::print(ros::console::FilterBase*, void*, ros::console::Level, const char*, int, const char*, const char*, ...)’
  161 | ROSCONSOLE_DECL void print(FilterBase* filter, void* logger, Level level,
      |                      ^~~~~
/opt/ros/noetic/include/ros/console.h:163:39: note:   no known conversion for argument 7 from ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const char*’
  163 |     const char* function, const char* fmt, ...) ROSCONSOLE_PRINTF_ATTRIBUTE(7, 8);
      |                           ~~~~~~~~~~~~^~~
/opt/ros/noetic/include/ros/console.h:165:22: note: candidate: ‘void ros::console::print(ros::console::FilterBase*, void*, ros::console::Level, const stringstream&, const char*, int, const char*)’
  165 | ROSCONSOLE_DECL void print(FilterBase* filter, void* logger, Level level,
      |                      ^~~~~
/opt/ros/noetic/include/ros/console.h:166:30: note:   no known conversion for argument 4 from ‘const char [54]’ to ‘const stringstream&’ {aka ‘const std::__cxx11::basic_stringstream<char>&’}
  166 |     const std::stringstream& str, const char* file, int line, const char* function);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~^~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
